Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber

---------------------------
  Jackdmp changes log
---------------------------

2008-09-03 Stephane Letz  <letz@grame.fr>
	
	* Implement DBUS entry points to handle internal clients, add new commands in jack_control."

2008-09-01 Stephane Letz  <letz@grame.fr>
	
	* Add new jack_set_port_rename_callback API, jack_port_set_name is now a server request that call port rename callbacks.

2008-08-26 Stephane Letz  <letz@grame.fr>
	
	* Better parameter handling in JackCoreAudioAdapter.
	* Fix memory leaks.

2008-08-23 Stephane Letz  <letz@grame.fr>
	
	* Implements internal clients management API.

2008-08-22 Stephane Letz  <letz@grame.fr>
	
	* Move GetCurrentTransportFrame code from JackClient to JackTransportEngine.
	* Add a fNetworkSync state in JackTransportEngine used in network.

2008-08-03 Stephane Letz  <letz@grame.fr>
	
	* Fix JackFrameTimer::Time2Frames and JackTimer::Frames2Time, jack_cpu compiled again.

2008-08-01 Stephane Letz  <letz@grame.fr>
	
	* Fix desallocation of remaining clients when server quits.
	* Close remaining client sockets in JackSocketServerChannel::Close.
	* Correct JackClient::Close() to request server close only if server is running.

2008-07-30 Stephane Letz  <letz@grame.fr>

	* Remove restriction that port connection could be done only if the client was activated.

2008-07-25 Stephane Letz  <letz@grame.fr>

	* Florian Faber patch for 32 bit float (LE only) support to jack's alsa driver.
        * Fix a crash bug when desallocating a non completely created external client.

2008-07-24 Stephane Letz  <letz@grame.fr>

	* Fix server client OSX special notification mechanism, CoreAudio driver compilation back for 10.4.

2008-07-18 Stephane Letz  <letz@grame.fr>

	* Correct audioadapter when a sample rate value different from jack server one is chosen.