@@ -696,7 +696,9 @@ extern "C"
         jack_driver_desc_t *desc;
         desc = ( jack_driver_desc_t* ) calloc ( 1, sizeof ( jack_driver_desc_t ) );
 
-        strcpy ( desc->name, "netmanager" ); // size MUST be less then JACK_DRIVER_NAME_MAX + 1
+        strcpy(desc->name, "netmanager");                           // size MUST be less then JACK_DRIVER_NAME_MAX + 1
+        strcpy(desc->desc, "netjack multi-cast master component");  // size MUST be less then JACK_DRIVER_PARAM_DESC + 1
+     
         desc->nparams = 2;
         desc->params = ( jack_driver_param_desc_t* ) calloc ( desc->nparams, sizeof ( jack_driver_param_desc_t ) );
 
