@@ -213,7 +213,10 @@ extern "C"
         unsigned int i;
         
         desc = (jack_driver_desc_t*)calloc(1, sizeof(jack_driver_desc_t));
-        strcpy (desc->name, "audioadapter"); // size MUST be less then JACK_DRIVER_NAME_MAX + 1
+        
+        strcpy(desc->name, "audioadapter");                            // size MUST be less then JACK_DRIVER_NAME_MAX + 1
+        strcpy(desc->desc, "netjack audio <==> net backend adapter");  // size MUST be less then JACK_DRIVER_PARAM_DESC + 1
+     
         desc->nparams = 9;
         params = (jack_driver_param_desc_t*)calloc(desc->nparams, sizeof(jack_driver_param_desc_t));
 
